@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
   
+  5 Feb 2005; Preston Cody <codeman@gentoo.org>
+  added custom kernel and bootsplash options.  hope it works.
+  
   26 Jan 2005; Preston Cody <codeman@gentoo.org>
   pretend now a runtime question.
   
